kubernetes_vs_1/k8s-final/ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: ingress1  
  annotations:  
    kubernetes.io/ingress.class: "nginx"  
    nginx.ingress.kubernetes.io/use-regex: "true"  
    nginx.ingress.kubernetes.io/rewrite-target: /$1  
    # cert-manager.io/issuer: letsencrypt-prod
  
spec:  
  # tls:   
  # - hosts:   
  #   - "thebem.online"  
  #   secretName: awesome-cats-tls 
  rules:  
    # - host: thebem.online  
    - http:  
        paths:  
          - path: /?(.*)  
            pathType: Prefix  
            backend:  
              service:  
                name: frontend-service  
                port:  
                  number: 80  
          - path: /api/?(.*)  
            pathType: Prefix  
            backend:  
              service:  
                name: backend-service  
                port:  
                  number: 3000
